salesforce-config/objects/Job_Application_c__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10</fullName>
                <default>true</default>
                <label>10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>