salesforce-config/objects/Job_Application_c__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <type>DateTime</type>
</CustomField>