salesforce-config/objects/Job_Application_c__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>