salesforce-config/objects/Job_Application_c__c/fields/Slack_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_ID__c</fullName>
    <label>Slack User ID</label>
    <type>TextArea</type>
</CustomField>